--- a/about.html
+++ b/about.html
@@ -100,11 +100,11 @@
          <div class="container">
           	<div class="col-md-12 col-md-offset-0 animate-box">
         
-        <h2> The Unatural Speed of Life </h2>
-					<p>In the last decades we have witnessed an <b>intensification of production</b> due to the current consumption patterns that demand for more resources. The pollution resulted from all the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events happening around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
+        <h2> The Unnatural Speed of Life </h2>
+					<p>In the last few decades we have witnessed an <b>intensification of production</b> due to the current consumption patterns that demand for more resources. The pollution resulted from all the current industrial-chain activities is jeopardizing the ecosystemic dynamic. The world today faces a <b>growing environmental crisis</b> and <b>climate change</b> is already a reality, with many extreme events happening around the globe: rainfall alteration, drought, or loss of biodiversity.</p>
 			
         <h2> The Roots of the Crisis </h2>
-          <p>These problems are not just a matter of the so-called ‘nature’, but affect the society directly. The human existence and survival has become dependent on even more complex technological devices, and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>
+          <p>These problems do not just affect the natural world but also society. The human existence and survival has become dependent on even more complex technological devices, and we find ourselves entrapped inside a <b>technological megastructure aiming both human and ecological exploitation</b>.</p>
           <p>The ecological crisis is deeply rooted in social problems and it is maintained by the current social and environmental alienation, the lack of sovereignty and autonomy on resources management, food production, environmental conservation, health and technology.</p>
       </div>    
 		</div>
@@ -129,7 +129,7 @@
           <h2> Collective Actions for Collective Problems </h2>
           </center>
         <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. We consider collective learning, a dialogue of knowledge for a wider understanding, as crucial for building the bases for social autonomy.</p>
-        <p>Thriving into free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed all around in any town, neighborhood or community considering their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>the environment</i>, free-libre and open technologies, and agroecology</b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
+        <p>Developing free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed in any town, neighborhood or community take in consideration their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>the environment</i>, free-libre and open technologies, and agroecology</b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
 				</div>
 			</div>
 		</section>
