--- a/agroecology.html
+++ b/agroecology.html
@@ -173,9 +173,9 @@
 					
 					<div class="gtco-tab-content-wrap">
 						<div class="gtco-tab-content tab-content active" data-tab-content="1">
-					<p>Agroecology is a paradigm that challenges the conventional industrial agriculture, namely the monoculture, the privatization of seeds, the depletion of resources, and so forth. Hence, this field  politicizes  its action on the territory by taking part on the social movements involved with farmers sovereignty, such as the rights to land or seeds.</p>
+					<p>Agroecology is a paradigm that challenges the conventional industrial agriculture, namely the monoculture, the privatization of seeds, the depletion of resources, and so forth. Hence, this field  politicizes  its' action on the territory by taking part on the social movements involved with farmers sovereignty, such as the rights to land or seeds.</p>
 					<p>It also considers the agronomic, biological, and ecological knowledge of agrosystems, either coming from the academia or from the local traditional knowledge, as long as it is not used for humans or resources exploitation. We can say that agroecology promotes a dialogue of knowledge. It also uses sociological tools so that farmers’ local knowledge and participation can take an important role. In this sense it brings light to the mainstream commercialization of agricultural products showing alternative distribution channels.</p>
-					<p>Agroecology contributes to show alternatives to the current social and ecological collapse that our planet, and human beings, face. Its ecosystemic and decentralized approach plays a central role to overcome our ecological and social milieu.</p>
+					<p>Agroecology shows us alternatives to the social and ecological collapse that our planet, and us as human beings, are facing. Its ecosystemic and decentralized approach plays a central role to overcome our ecological and social challenges.</p>
 				</div>
 			</div>
 			
