--- a/courses.html
+++ b/courses.html
@@ -161,8 +161,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Activities</h1>
-							<h3> Training and Courses </h3>
+							<h1> Learning</h1>
+							<h3> Workshops and Courses </h3>
 						</div>
 					</div>
 				</div>
@@ -190,13 +190,13 @@
 
     <div id="content2">
       <p>Freedom is for Everyone</p>
-      <p> The concepts of freedom in free technology most of time is strongly developers oriented. At the end of the day users can see how the importance of freedom concepts associated to software and hardware in their daily life and as a dimension of social activities.</p>
-      <p>Periodically we offer courses and workshops on GNU/Linux, security, programing languages and projects in technology focused on users.</p>
+      <p> The concepts of freedom in free technology is most of the time strongly developers-oriented. At the end of our workshops users can see how important the concept of freedom associated to software and hardware is, specially in relation with their daily life and social dimension.</p>
+      <p>Periodically we offer courses and workshops on GNU/Linux, security, programming languages and projects in technology focused on users.</p>
     </div>
 
     <div id="content3">
-      <p> The courses and meetings covering this subject are proposed to arouse in a broad audience the debate about the events we are experiencing in the anthropocene and the real proposals to overcome the deep social/environmental crisis.</p>
-      <p>Right now we leave in a crucial moment of the environmental crisis in which almost (if not all) liberal alternatives to revert an iminent colapse had failed. From carbon credit to the payment for ecosystem services, none of this market-oriented ideas gave us a real solution. On the contrary, in most of these examples, what we see was an enhancing of the crisis. </p>
+      <p> The courses and meetings covering this subject are proposed to arouse in a broad audience debates about the events we are experiencing in the anthropocene, and real proposals to overcome the deep social and environmental crisis we are facing.</p>
+      <p>Right now we live in a crucial moment of environmental crisis in which almost (if not all) liberal alternatives to revert an imminent collapse have failed. From carbon credit to the payment for ecosystem services, none of these market-oriented ideas gave us a real solution. On the contrary, in most of these examples, what we have seen is a deepening of the crisis. </p>
     </div>
   
     </div>
