--- a/data.html
+++ b/data.html
@@ -175,7 +175,7 @@
         <div class="column">
         <h3> The First For Data Communication</h3>
         <p> Data analysis is a crucial step on ecological studies in order to reach the main information which will be the base for the further steps, including data plot, statistical analysis, reports and the taking of decisions.</p>
-      <p>The team involved on the data analysis counts with more then 10 years of experience on ecological data analysis covering such areas:</p>
+      <p>The team involved on the data analysis counts with more than 10 years of experience on ecological data analysis covering such areas:</p>
       
        <ul>
         <li>Abiotic Data</li>
