--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-testem">
 					<h2>We Are Connected</h2>
-					<p>Ecology, Society and Technology are the interconected fields we focus on</p>
+					<p>Ecology, Society and Technology are the interconnected fields we focus on</p>
 				</div>
 			</div>
 
@@ -203,12 +203,12 @@
 							<div class="col-md-6">
 								<h2>Social and Ecological Concepts in Farming</h2>
 		<p>Agroecology views the environment, the agricultural production and farmers themselves as part of an ecosystem.</p>
-    <p> Its ecosystemic and decentralized approach plays a central role to overcome our ecological and social milieu, as it fosters farmers' autonomy and environmental sustainability. Agroecology contributes to show alternatives to the current social and ecological collapse that our planet, and human beings, face.</p>
+    <p> Its ecosystemic and decentralized approach plays a central role in overcoming our ecological and social challenge, as it fosters farmers' autonomy and environmental sustainability. Agroecology shows us alternatives to the social and ecological collapse that our planet, and us as human beings, are facing.</p>
     
               	<div class="row">
 									<div class="col-md-6">
 										<h2 class="uppercase">Real World, Real Cases</h2>
-										<p>Recovering the endangered traditional knowdlege</p>
+										<p>Recovering the endangered traditional knowledge</p>
 									</div>
 									<div class="col-md-6">
 										<h2 class="uppercase">Critical Thoughts for Autonomy</h2>
@@ -227,8 +227,8 @@
 							</div>
 							<div class="col-md-6">
 								<h2>Free Technology Projects With An Ecological Approach</h2>
-								<p> Free and Open Source Tools enable everyone to use, create, study, modify, distribute, obtain and share knowledge and projects increasing the access and strenthing the participatory process in society.</p>
-								<p>The use of these technologies is not about the price, but about the autonomy that users and developers have over softwares and hardwares. It plays a central role to free the concepts of "ethics", "democratization" and "empowerment" from the corporative rethoric.</p>
+								<p> Free and Open Source Tools enable everyone to use, create, study, modify, distribute, obtain and share knowledge and projects increasing the access and strengthening the participatory process in society.</p>
+								<p>The use of these technologies is not about the price, but about the autonomy that users and developers have over softwares and hardwares. It plays a central role to free the concepts of "ethics", "democratization" and "empowerment" from the corporate rhetoric.</p>
 
 								<div class="row">
 									<div class="col-md-6">
@@ -250,14 +250,14 @@
 							</div>
 							<div class="col-md-6">
 								<h2>Data as Evidence</h2>
-				        <p>Data is more than cold numbers. Data is sampled according to specific questions or reasons. We can see data as a potential evidence for our studies and further decisions and initiatives. From the impact of large scale agriculture or industrial activities to socioenvironmental crisis in conflict zones. </p>
+				        <p>Data is more than cold numbers. Data is sampled according to specific questions or reasons. We can see data as potential evidence for our studies and further decisions and initiatives. From the impact of large scale agriculture or industrial activities to socio environmental crisis in conflict zones. </p>
 								<p>At the same time there are ethical principles related to the use of data and risks associated to censorship and centralized interests. Thus, alternative decentralized structures and open access to the data in a trustful network are important.</p>
 								<div class="row">
 									<div class="col-md-6">
 										<h2 class="uppercase">Management and Statistical Analysis of Data</h2>
 									</div>
 									<div class="col-md-6">
-										<h2 class="uppercase">From individual to ecosystem</h2>
+										<h2 class="uppercase">From individuals to ecosystem</h2>
 									</div>
 								</div>
 								
@@ -271,8 +271,8 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<h2>Dialogue of Knowdlege, Ecology of Thoughts</h2>
-								<p>Teaching and learning together. A space where knowdlege from social struggles, and theories for emancipation dialogue to generate a critical consciousness for transformation. A dynamic process that aims to challenge hierarchies and oppressions in the learning process.</p>
+								<h2>Dialogue of Knowledge, Ecology of Thoughts</h2>
+								<p>Teaching and learning together. A space where knowledge from social struggles, and theories for emancipation dialogue to generate a critical consciousness for transformation. A dynamic process that aims to challenge hierarchies and oppression in the learning process.</p>
 
 								<div class="row">
 									<div class="col-md-6">
