--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<title>Cal Teixidor &mdash; A Center for Social Ecology and Free Technology</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Cal Teixidor Website" />
-	<meta name="keywords" content="free ecology, open source, free software, libre, agroecology" />
+	<meta name="keywords" content="free ecology, citizen science, open source, libre, agroecology" />
 	<meta name="author" content="Cal Teixidor" />
 
   	<!-- Facebook and Twitter integration -->
@@ -129,7 +129,7 @@
           <h2> Collective Actions for Collective Problems </h2>
           </center>
         <p>It is urgent to pursue an epistemological change that understands the environment as a whole ecosystem, namely an ecosocial system with decentralized inter-independent parts. We consider collective learning, a dialogue of knowledge for a wider understanding, as crucial for building the bases for social autonomy.</p>
-        <p>Developing free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed in any town, neighborhood or community take in consideration their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>the environment</i>, free-libre and open technologies, and agroecology</b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
+        <p>Developing free tools, that promote communities’ sovereignty, is the key to move towards a real change. <b>Cal Teixidor</b> (the weaver’s house in Catalan) aims to trigger a network of inter-independent projects that can be performed in any town, neighborhood or community according to their realities. Our purpose is to develop projects gathering together <b>technology, grassroots participation and ecology</b> in which freedom and autonomy can flourish. We are founded on three pillars: <b><i>participatory science</i>, free-libre and open technologies, and agroecology</b>. Cal Teixidor is a culmination of years of environmental studies, experience in agroecology, and development of free technology with a social approach. The integration of these aspects allows to connect the nodes and expand the edges to build a <b>real transformation</b>.</p>
 				</div>
 			</div>
 		</section>
