--- a/data.html
+++ b/data.html
@@ -68,7 +68,7 @@
 	<title>Cal Teixidor &mdash; A Center for Social Ecology and Free Technology</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Cal Teixidor Website" />
-	<meta name="keywords" content="free ecology, open source, free software, libre, agroecology" />
+	<meta name="keywords" content="free ecology, citizen science, open source, libre, agroecology" />
 	<meta name="author" content="Cal Teixidor" />
 
   	<!-- Facebook and Twitter integration -->
