update header in about.html

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Cal Teixidor Website" />
 	<meta name="keywords" content="free ecology, citizen science, open source, libre, agroecology" />
-	<meta name="author" content="Cal Teixidor" />
+	<meta name="author" content="S. Jacques" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
