fix broken link in catalan language

--- a/agroecology.html
+++ b/agroecology.html
@@ -144,10 +144,10 @@
 				</div>
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
-					  <li><a href="en/agroecology.html">en</a></li>
+					  <li><a href="en/about.html">en</a></li>
 					  <li><a href="#">CA</a></li>
-					  <li><a href="es/agroecology.html">ES</a></li>
-						<li><a href="pt/agroecology.html">PT</a></li>
+					  <li><a href="#">ES</a></li>
+						<li><a href="pt/about.html">PT</a></li>						
 				</div>
 			</div>
 		</div>
