--- a/courses.html
+++ b/courses.html
@@ -155,7 +155,7 @@
 					<ul>
 					  <li><a href="en/courses.html">en</a></li>
 					  <li><a href="#">CA</a></li>
-					  <li><a href="es/courses.html">ES</a></li>
+					  <li><a href="#">ES</a></li>
 						<li><a href="pt/courses.html">PT</a></li>
 				</div>				
 			</div>
