--- a/projects.html
+++ b/projects.html
@@ -144,11 +144,11 @@
 				</div>
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
-					  <li><a href="en/projects.html">en</a></li>
-					  <li><a href="#.html">CA</a></li>
-					  <li><a href="es/projects.html">ES</a></li>
-						<li><a href="pt/projects.html">PT</a></li>
-				</div>				
+					  <li><a href="en/about.html">en</a></li>
+					  <li><a href="#">CA</a></li>
+					  <li><a href="#">ES</a></li>
+						<li><a href="pt/about.html">PT</a></li>						
+				</div>
 			</div>
 		</div>
 	</nav>
