--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
 					  <li><a href="en/about.html">en</a></li>
-					  <li><a href="#.html">CA</a></li>
-					  <li><a href="es/about.html">ES</a></li>
+					  <li><a href="#">CA</a></li>
+					  <li><a href="#">ES</a></li>
 						<li><a href="pt/about.html">PT</a></li>						
 				</div>
 			</div>
