--- a/contact.html
+++ b/contact.html
@@ -137,11 +137,11 @@
 				</div>
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
-					  <li><a href="en/contact.html">en</a></li>
+					  <li><a href="en/about.html">en</a></li>
 					  <li><a href="#">CA</a></li>
-					  <li><a href="es/contact.html">ES</a></li>
-						<li><a href="pt/contact.html">PT</a></li>
-				</div>				
+					  <li><a href="#">ES</a></li>
+						<li><a href="pt/about.html">PT</a></li>						
+				</div>
 			</div>
 		</div>
 	</nav>
