--- a/data.html
+++ b/data.html
@@ -140,11 +140,11 @@
 				</div>
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
-					  <li><a href="en/data.html">en</a></li>
+					  <li><a href="en/about.html">en</a></li>
 					  <li><a href="#">CA</a></li>
-					  <li><a href="es/data.html">ES</a></li>
-						<li><a href="pt/data.html">PT</a></li>
-				</div>				
+					  <li><a href="#">ES</a></li>
+						<li><a href="pt/about.html">PT</a></li>						
+				</div>
 			</div>
 		</div>
 	</nav>
