--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 				</div>
 				<div class="col-xs-16 text-center menu-1">
 					<ul>
-					  <li><a href="en/index.html">en</a></li>
-					  <li><a href="#.html">CA</a></li>
-					  <li><a href="es/index.html">ES</a></li>
-						<li><a href="pt/index.html">PT</a></li>
-				</div>				
+					  <li><a href="en/about.html">en</a></li>
+					  <li><a href="#">CA</a></li>
+					  <li><a href="#">ES</a></li>
+						<li><a href="pt/about.html">PT</a></li>						
+				</div>
 			</div>
 		</div>
 	</nav>
